fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 /*  font-family: 'Source Sans Pro', sans-serif;  */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: 'Source Sans Pro', sans-serif; 
@@ -17,7 +21,7 @@ h1 {
     font-size: 2.25rem;
     font-weight: 300;
     color: #fff;
-    margin: 2em 0;
+    margin: 0;
 }
 
 h1 + p {
@@ -30,11 +34,14 @@ h1 + p {
 
 h2 {
     font-size: 1.3125rem;
+    margin: 0;
 }
 
 h2 + p {
     font-weight: 900;
     color: #F18119;
+    margin-top: 0;
+    text-transform: uppercase;
 }
 
 .top-text {
@@ -58,18 +65,32 @@ strong { font-weight: 900; }
    ================= */
    
 .intro {
-    background-image: url(assets/dark-ribs.jpg);
+    background-image: url(images/dark-ribs.jpg);
+    background-size: cover;
     background-color: #404040;
-    padding: 0 .25em 1em;
+    background-position: center;
+    padding: 0 .5em 2em;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    min-height: 50vh;
 }
 
-/* =================
-   media queries
-   ================= */
 
-   @media (min-width: 500px) {
+/* =================
+   main-content section 
+   ================= */
+   
+.main-content {
+    padding: 2em 1em;
+}
+
+
+/* =================
+   media queries 
+   ================= */
+   
+@media (min-width: 500px) {
     body {
         font-size: 1.125rem;
         display: flex;
@@ -88,5 +109,11 @@ strong { font-weight: 900; }
     .main-content {
         width: 50%;
         min-height: 100vh;
+    }
+    
+    .main-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
